[package]
name = "macro_scope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = {version = "2.0.29", features = ["full", "derive", "parsing", "printing", "extra-traits"]}
prettyplease = "0.2.12"
